# redis_flex_poc

./: .gitignore  CMakeLists.txt  main.cpp
doc/: class_diagram.puml
include/: db_controller.hpp  entry.hpp  i_cache.hpp  i_eviction_policy.hpp  i_key_value_storage.hpp  lfu_eviction_policy.hpp  lru_eviction_policy.hpp  memory_controller.hpp  ram_cache.hpp  speedb_flash_storage.hpp
src/: db_controller.cpp  lfu_eviction_policy.cpp  lru_eviction_policy.cpp  memory_controller.cpp  ram_cache.cpp  speedb_flash_storage.cpp
tests/: CMakeLists.txt  lfu_eviction_policy_ut.cpp
